--- a/LeetCode - Graph.ipynb
+++ b/LeetCode - Graph.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,13 +181,13 @@
     "        n, level = len(queue), []\n",
     "        for _ in range(n):\n",
     "            u = queue.popleft()\n",
-    "            status, distance, _ = state[u]\n",
+    "            status, distance, predecessor = state[u]\n",
     "            for v in graph[u]:\n",
     "                if state[v][0]!=\"unvisited\":\n",
     "                    continue\n",
     "                state[v] = (\"visiting\", state[u][1] + 1, u)\n",
     "                queue.append(v)\n",
-    "            state[u] = (\"visited\")\n",
+    "            state[u] = (\"visited\", distance, predecessor)\n",
     "            level.append(u)\n",
     "        res.append(level)\n",
     "    return res\n",
