--- a/Weekly Contest/Weekly Contest 209.ipynb
+++ b/Weekly Contest/Weekly Contest 209.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [1608. Special Array With X Elements Greater Than or Equal X]()\n",
+    "### [1608. Special Array With X Elements Greater Than or Equal X](https://leetcode.com/contest/weekly-contest-209/problems/special-array-with-x-elements-greater-than-or-equal-x/)\n",
     "\n",
     "\n",
     "You are given an array `nums` of non-negative integers. `nums` is considered special if there exists a number `x` such that there are exactly `x` numbers in `nums` that are greater than or equal to `x`.\n",
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [1609. Even Odd Tree]()\n",
+    "### [1609. Even Odd Tree](https://leetcode.com/contest/weekly-contest-209/problems/even-odd-tree/)\n",
     "\n",
     "\n",
     "A binary tree is named Even-Odd if it meets the following conditions:\n",
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [1610. Maximum Number of Visible Points]()\n",
+    "### [1610. Maximum Number of Visible Points](https://leetcode.com/contest/weekly-contest-209/problems/maximum-number-of-visible-points/)\n",
     "\n",
     "\n",
     "You are given an array `points`, an integer `angle`, and your `location`, where `location = [posx, posy]` and `points[i] = [xi, yi]` both denote integral coordinates on the X-Y plane.\n",
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### [1611. Minimum One Bit Operations to Make Integers Zero]()\n",
+    "### [1611. Minimum One Bit Operations to Make Integers Zero](https://leetcode.com/contest/weekly-contest-209/problems/minimum-one-bit-operations-to-make-integers-zero/)\n",
     "\n",
     "\n",
     "Given an integer `n`, you must transform it into `0` using the following operations any number of times:\n",
