--- a/LeetCode - Graph.ipynb
+++ b/LeetCode - Graph.ipynb
@@ -490,8 +490,179 @@
     "            return True\n",
     "        for course in range(numCourses):\n",
     "            if dfs(course) == False:\n",
+    "                # return False\n",
     "                return []\n",
+    "        # return len(res)==numCourses\n",
     "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Topological Sort with Undirected Graph\n",
+    "\n",
+    "### [261. Graph Valid Tree](https://leetcode.com/problems/graph-valid-tree/)\n",
+    "\n",
+    "Given `n` nodes labeled from `0` to `n-1` and a list of undirected edges (each edge is a pair of nodes), write a function to check whether these edges make up a valid tree.\n",
+    "\n",
+    "#### Example 1:\n",
+    "\n",
+    "Input: `n = 5`, and `edges = [[0,1], [0,2], [0,3], [1,4]]`\n",
+    "\n",
+    "Output: true\n",
+    "\n",
+    "#### Example 2:\n",
+    "\n",
+    "Input: `n = 5,` and `edges = [[0,1], [1,2], [2,3], [1,3], [1,4]]`\n",
+    "\n",
+    "Output: false\n",
+    "\n",
+    "#### Note:\n",
+    "you can assume that no duplicate edges will appear in `edges`. Since all edges are undirected, `[0,1]` is the same as `[1,0]` and thus will not appear together in `edges`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def validTree(self, n: int, edges: List[List[int]]) -> bool:\n",
+    "        graph = collections.defaultdict(set)\n",
+    "        for u, v in edges:\n",
+    "            if v not in graph[u]:\n",
+    "                graph[u].add(v)\n",
+    "            if u not in graph[v]:\n",
+    "                graph[v].add(u)\n",
+    "        # dfs\n",
+    "        res, state = collections.deque([]), collections.defaultdict(lambda: \"Not taking\")\n",
+    "        def dfs(i, prev):\n",
+    "            if state[i] == \"taken\": return True\n",
+    "            if state[i] == \"taking\": return False\n",
+    "            state[i] = \"taking\"\n",
+    "            for nxt in graph[i]:\n",
+    "                if nxt!=prev and not dfs(nxt, i):\n",
+    "                    return False\n",
+    "            state[i] = \"taken\"\n",
+    "            res.appendleft(i)\n",
+    "            return True\n",
+    "        if not dfs(0, float('inf')):\n",
+    "            return False\n",
+    "        return len(res)==n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Topological Sort with Kahn's BFS algorithm\n",
+    "### [269. Alien Dictionary](https://leetcode.com/problems/alien-dictionary/)\n",
+    "\n",
+    "There is a new alien language which uses the latin alphabet. However, the order among letters are unknown to you. You receive a list of non-empty words from the dictionary, where words are sorted lexicographically by the rules of this new language. Derive the order of letters in this language.\n",
+    "\n",
+    "#### Example 1:\n",
+    "\n",
+    "Input:\n",
+    "[\n",
+    "  \"wrt\",\n",
+    "  \"wrf\",\n",
+    "  \"er\",\n",
+    "  \"ett\",\n",
+    "  \"rftt\"\n",
+    "]\n",
+    "\n",
+    "Output: \"wertf\"\n",
+    "\n",
+    "#### Example 2:\n",
+    "\n",
+    "Input:\n",
+    "[\n",
+    "  \"z\",\n",
+    "  \"x\"\n",
+    "]\n",
+    "\n",
+    "Output: \"zx\"\n",
+    "\n",
+    "#### Example 3:\n",
+    "\n",
+    "Input:\n",
+    "[\n",
+    "  \"z\",\n",
+    "  \"x\",\n",
+    "  \"z\"\n",
+    "] \n",
+    "\n",
+    "Output: \"\" \n",
+    "\n",
+    "Explanation: The order is invalid, so return \"\".\n",
+    "\n",
+    "#### Note:\n",
+    "\n",
+    "You may assume all letters are in lowercase.\n",
+    "If the order is invalid, return an empty string.\n",
+    "There may be multiple valid order of letters, return any one of them is fine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def alienOrder(self, words: List[str]) -> str:\n",
+    "        indegree, graph = {c: 0 for word in words for c in word}, collections.defaultdict(set)\n",
+    "        for i in range(1, len(words)):\n",
+    "            is_prefix = True\n",
+    "            for a, b in zip(words[i-1], words[i]):\n",
+    "                if a == b:\n",
+    "                    continue\n",
+    "                if b not in graph[a]: \n",
+    "                    indegree[b] += 1\n",
+    "                is_prefix = False\n",
+    "                graph[a].add(b)\n",
+    "                break\n",
+    "            if is_prefix == True and len(words[i-1]) > len(words[i]):\n",
+    "                return \"\" \n",
+    "\n",
+    "        def dfsTopo():\n",
+    "            res, state = collections.deque([]), collections.defaultdict(lambda: \"Not taking\")\n",
+    "            def dfs(i):\n",
+    "                if state[i] == \"taken\": return True\n",
+    "                if state[i] == \"taking\": return False\n",
+    "                state[i] = \"taking\"\n",
+    "                for nxt in graph[i]:\n",
+    "                    if not dfs(nxt):\n",
+    "                        return False\n",
+    "                state[i] = \"taken\"\n",
+    "                res.appendleft(i)\n",
+    "                return True\n",
+    "            for i in list(graph.keys()):\n",
+    "                if not dfs(i):\n",
+    "                    return \"\"\n",
+    "            #print(res)\n",
+    "            return \"\".join(res)\n",
+    "    \n",
+    "\n",
+    "        # Kahn's BFS\n",
+    "        def kahnBFSTopo():\n",
+    "            res = \"\"\n",
+    "            # start w 0 indegree nodes\n",
+    "            queue = deque([c for c in indegree if indegree[c]==0])\n",
+    "            while queue:\n",
+    "                c = queue.popleft()\n",
+    "                res += c\n",
+    "                for n in graph[c]:\n",
+    "                    indegree[n] -= 1\n",
+    "                    if indegree[n]==0: \n",
+    "                        queue.append(n)\n",
+    "            return res if len(res) == len(indegree) else ''\n",
+    "        \n",
+    "        return kahnBFSTopo()"
    ]
   },
   {
@@ -756,6 +927,93 @@
     "                    dist[v-1] = dist[u-1] + weight\n",
     "        res = max(dist.values())\n",
     "        return -1 if res==sys.maxsize else res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Floyd–Warshall algorithm ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [1617. Count Subtrees With Max Distance Between Cities](https://leetcode.com/problems/count-subtrees-with-max-distance-between-cities/)\n",
+    "\n",
+    "\n",
+    "There are `n` cities numbered from `1` to `n`. You are given an array `edges` of size `n-1`, where `edges[i] = [ui, vi]` represents a bidirectional edge between cities `ui` and `vi`. There exists a unique path between each pair of cities. In other words, the cities form a tree.\n",
+    "\n",
+    "A subtree is a subset of cities where every city is reachable from every other city in the subset, where the path between each pair passes through only the cities from the subset. Two subtrees are different if there is a city in one subtree that is not present in the other.\n",
+    "\n",
+    "For each `d` from `1` to `n-1`, find the number of subtrees in which the maximum distance between any two cities in the subtree is equal to `d`.\n",
+    "\n",
+    "Return *an array of size* `n-1` *where the *`dth`*element (1-indexed) is the number of subtrees in which the maximum distance between any two cities is equal to *`d`.\n",
+    "\n",
+    "Notice that the distance between the two cities is the number of edges in the path between them.\n",
+    "\n",
+    "#### Example 1:\n",
+    "\n",
+    "![](https://assets.leetcode.com/uploads/2020/09/21/p1.png)\n",
+    "\n",
+    "Input: n = 4, edges = \\[\\[1,2\\],\\[2,3\\],\\[2,4\\]\\]\n",
+    "\n",
+    "Output: \\[3,4,0\\]\n",
+    "\n",
+    "Explanation: The subtrees with subsets {1,2}, {2,3} and {2,4} have a max distance of 1.\n",
+    "The subtrees with subsets {1,2,3}, {1,2,4}, {2,3,4} and {1,2,3,4} have a max distance of 2.\n",
+    "No subtree has two nodes where the max distance between them is 3.\n",
+    "\n",
+    "#### Example 2:\n",
+    "\n",
+    "Input: n = 2, edges = \\[\\[1,2\\]\\]\n",
+    "\n",
+    "Output: \\[1\\]\n",
+    "\n",
+    "#### Example 3:\n",
+    "\n",
+    "Input: n = 3, edges = \\[\\[1,2\\],\\[2,3\\]\\]\n",
+    "\n",
+    "Output: \\[2,1\\]\n",
+    "\n",
+    "#### Constraints:\n",
+    "\n",
+    "-   `2 <= n <= 15`\n",
+    "-   `edges.length == n-1`\n",
+    "-   `edges[i].length == 2`\n",
+    "-   `1 <= ui, vi <= n`\n",
+    "-   All pairs `(ui, vi)` are distinct."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countSubgraphsForEachDiameter(self, n: int, edges: List[List[int]]) -> List[int]:\n",
+    "        graph = [[0 if i==j else float('inf') for j in range(n)] for i in range(n)]       \n",
+    "        for s, t in edges:\n",
+    "            graph[s-1][t-1], graph[t-1][s-1] = 1, 1\n",
+    "        # Use Floyd-Warshall to find all shortest paths.\n",
+    "        for k in range(n):\n",
+    "            for i in range(n):\n",
+    "                for j in range(n):\n",
+    "                    if i == j:\n",
+    "                        continue\n",
+    "                    graph[i][j] = min(graph[i][j], graph[i][k]+graph[k][j])\n",
+    "        # Brute force all possible subsets and count subtrees with diameter d.\n",
+    "        res = [0]*(n-1)\n",
+    "        for k in range(2, n+1):\n",
+    "            for s in itertools.combinations(range(n), k):\n",
+    "                edges = sum(graph[i][j] for i, j in itertools.product(s, s) if i < j and graph[i][j]==1)\n",
+    "                if edges != k - 1:\n",
+    "                    continue\n",
+    "                diameter = max(graph[i][j] for i, j in itertools.product(s, s) if i < j)\n",
+    "                res[diameter-1] += 1\n",
+    "        return res"
    ]
   },
   {
@@ -1185,7 +1443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
